--- a/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
+++ b/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
@@ -25,10 +25,10 @@
             </objects>
             <point key="canvasLocation" x="402.89855072463769" y="1593.75"/>
         </scene>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="kUY-lB-j9k">
             <objects>
-                <viewController id="rmT-Rp-PLG" sceneMemberID="viewController">
+                <viewController id="rmT-Rp-PLG" customClass="LoginViewController" customModule="GSMFestival" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="97R-UT-OIF">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -49,7 +49,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="5TQ-9g-2fJ" secondAttribute="bottom" constant="5" id="6Y4-ft-IdS"/>
                                     <constraint firstItem="5TQ-9g-2fJ" firstAttribute="leading" secondItem="KEH-Yz-2f6" secondAttribute="leading" constant="8" id="Fm3-j0-gMh"/>
@@ -74,7 +74,7 @@
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="9UD-74-A7g" firstAttribute="leading" secondItem="9qt-st-5id" secondAttribute="trailing" constant="6" id="0po-Aw-TKu"/>
                                     <constraint firstItem="9qt-st-5id" firstAttribute="top" secondItem="oIm-68-MUu" secondAttribute="top" constant="5" id="2fA-en-JQM"/>
@@ -89,8 +89,12 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o0T-X9-HtO">
                                 <rect key="frame" x="28" y="640" width="358" height="61"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="로그인"/>
+                                <connections>
+                                    <action selector="loginBtn:" destination="rmT-Rp-PLG" eventType="touchUpInside" id="4Dr-F1-u41"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="XfC-sR-rYh"/>
@@ -114,10 +118,15 @@
                             <constraint firstItem="XfC-sR-rYh" firstAttribute="trailing" secondItem="KEH-Yz-2f6" secondAttribute="trailing" constant="28" id="wHN-K3-PrW"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="doneBtn" destination="o0T-X9-HtO" id="qsz-CR-XAe"/>
+                        <outlet property="idView" destination="KEH-Yz-2f6" id="Is9-46-7pJ"/>
+                        <outlet property="passwordView" destination="oIm-68-MUu" id="x4E-dV-tJ3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z15-fW-b6d" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2362.3188405797105" y="-361.60714285714283"/>
+            <point key="canvasLocation" x="-1501" y="-252"/>
         </scene>
         <!--Side Menu View Controller-->
         <scene sceneID="2Gt-TD-4F9">
@@ -276,7 +285,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="LQg-MM-KOG">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="fof-Rn-VT3" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="MainPage" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="fof-Rn-VT3" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Qfh-D9-4aV">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
@@ -382,9 +391,6 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
