로그인 화면 Auto Layout 수정 완료

--- a/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
+++ b/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
@@ -34,60 +34,66 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="deno_black_logo" translatesAutoresizingMaskIntoConstraints="NO" id="dLQ-UB-0TL">
-                                <rect key="frame" x="28" y="73" width="358" height="277"/>
+                                <rect key="frame" x="28" y="73" width="358" height="368"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KEH-Yz-2f6">
-                                <rect key="frame" x="28" y="388" width="358" height="57"/>
+                                <rect key="frame" x="28" y="471" width="358" height="57"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5TQ-9g-2fJ">
-                                        <rect key="frame" x="8" y="6.5" width="41" height="44.5"/>
+                                        <rect key="frame" x="0.0" y="1.5" width="42" height="54.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="42" id="bTY-gS-m1c"/>
+                                        </constraints>
                                     </imageView>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="아이디" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M0h-X5-fuX">
-                                        <rect key="frame" x="55" y="0.0" width="303" height="57"/>
+                                        <rect key="frame" x="42" y="0.0" width="316" height="57"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="5TQ-9g-2fJ" secondAttribute="bottom" constant="5" id="6Y4-ft-IdS"/>
-                                    <constraint firstItem="5TQ-9g-2fJ" firstAttribute="leading" secondItem="KEH-Yz-2f6" secondAttribute="leading" constant="8" id="Fm3-j0-gMh"/>
-                                    <constraint firstAttribute="trailing" secondItem="5TQ-9g-2fJ" secondAttribute="trailing" constant="309" id="FrA-kf-QsG"/>
-                                    <constraint firstItem="M0h-X5-fuX" firstAttribute="leading" secondItem="5TQ-9g-2fJ" secondAttribute="trailing" constant="6" id="KAE-Fc-Cb4"/>
-                                    <constraint firstItem="M0h-X5-fuX" firstAttribute="top" secondItem="KEH-Yz-2f6" secondAttribute="top" id="Tw4-Vc-1WO"/>
-                                    <constraint firstAttribute="bottom" secondItem="M0h-X5-fuX" secondAttribute="bottom" id="Xy1-8F-z7l"/>
-                                    <constraint firstAttribute="trailing" secondItem="M0h-X5-fuX" secondAttribute="trailing" id="aHA-rP-Rux"/>
-                                    <constraint firstItem="5TQ-9g-2fJ" firstAttribute="top" secondItem="KEH-Yz-2f6" secondAttribute="top" constant="5" id="wKU-pE-Tzm"/>
+                                    <constraint firstAttribute="bottom" secondItem="5TQ-9g-2fJ" secondAttribute="bottom" id="K3j-SQ-v6n"/>
+                                    <constraint firstItem="M0h-X5-fuX" firstAttribute="leading" secondItem="5TQ-9g-2fJ" secondAttribute="trailing" id="QgA-is-LZi"/>
+                                    <constraint firstItem="5TQ-9g-2fJ" firstAttribute="leading" secondItem="KEH-Yz-2f6" secondAttribute="leading" id="ULJ-lD-Kko"/>
+                                    <constraint firstAttribute="bottom" secondItem="M0h-X5-fuX" secondAttribute="bottom" id="dce-b5-Z7d"/>
+                                    <constraint firstItem="5TQ-9g-2fJ" firstAttribute="top" secondItem="KEH-Yz-2f6" secondAttribute="top" id="fnL-zE-T9I"/>
+                                    <constraint firstItem="M0h-X5-fuX" firstAttribute="top" secondItem="KEH-Yz-2f6" secondAttribute="top" id="lDD-oc-KAq"/>
+                                    <constraint firstAttribute="trailing" secondItem="M0h-X5-fuX" secondAttribute="trailing" id="mqK-WW-A7m"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oIm-68-MUu">
-                                <rect key="frame" x="28" y="465" width="358" height="57"/>
+                                <rect key="frame" x="28" y="578" width="358" height="57"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="9qt-st-5id">
-                                        <rect key="frame" x="8" y="5.5" width="41" height="45.5"/>
+                                        <rect key="frame" x="0.0" y="0.5" width="42" height="55.5"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="42" id="YxS-KF-1dn"/>
+                                        </constraints>
                                     </imageView>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9UD-74-A7g">
-                                        <rect key="frame" x="55" y="0.0" width="303" height="57"/>
+                                        <rect key="frame" x="42" y="0.0" width="316" height="57"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="9UD-74-A7g" firstAttribute="leading" secondItem="9qt-st-5id" secondAttribute="trailing" constant="6" id="0po-Aw-TKu"/>
-                                    <constraint firstItem="9qt-st-5id" firstAttribute="top" secondItem="oIm-68-MUu" secondAttribute="top" constant="5" id="2fA-en-JQM"/>
-                                    <constraint firstAttribute="bottom" secondItem="9UD-74-A7g" secondAttribute="bottom" id="5u3-Wy-7Gb"/>
-                                    <constraint firstAttribute="bottom" secondItem="9qt-st-5id" secondAttribute="bottom" constant="5" id="LDz-nn-S2E"/>
-                                    <constraint firstAttribute="trailing" secondItem="9qt-st-5id" secondAttribute="trailing" constant="309" id="doi-Ms-9kr"/>
-                                    <constraint firstItem="9UD-74-A7g" firstAttribute="top" secondItem="oIm-68-MUu" secondAttribute="top" id="gVi-rZ-NYH"/>
-                                    <constraint firstItem="9qt-st-5id" firstAttribute="leading" secondItem="oIm-68-MUu" secondAttribute="leading" constant="8" id="ob8-1g-M5G"/>
-                                    <constraint firstAttribute="trailing" secondItem="9UD-74-A7g" secondAttribute="trailing" id="pdi-e7-KVT"/>
+                                    <constraint firstAttribute="trailing" secondItem="9UD-74-A7g" secondAttribute="trailing" id="Vrv-jX-rwR"/>
+                                    <constraint firstItem="9UD-74-A7g" firstAttribute="top" secondItem="oIm-68-MUu" secondAttribute="top" id="YI4-oU-vrz"/>
+                                    <constraint firstItem="9qt-st-5id" firstAttribute="top" secondItem="oIm-68-MUu" secondAttribute="top" id="dMa-sq-JqY"/>
+                                    <constraint firstAttribute="bottom" secondItem="9UD-74-A7g" secondAttribute="bottom" id="deg-Nr-p6K"/>
+                                    <constraint firstItem="9UD-74-A7g" firstAttribute="leading" secondItem="9qt-st-5id" secondAttribute="trailing" id="ovO-v1-HjH"/>
+                                    <constraint firstItem="9qt-st-5id" firstAttribute="leading" secondItem="oIm-68-MUu" secondAttribute="leading" id="vKT-j0-0qw"/>
+                                    <constraint firstAttribute="bottom" secondItem="9qt-st-5id" secondAttribute="bottom" id="xg4-g5-3de"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o0T-X9-HtO">
-                                <rect key="frame" x="28" y="640" width="358" height="61"/>
+                                <rect key="frame" x="28" y="745" width="358" height="57"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -100,22 +106,22 @@
                         <viewLayoutGuide key="safeArea" id="XfC-sR-rYh"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="oIm-68-MUu" firstAttribute="top" secondItem="KEH-Yz-2f6" secondAttribute="bottom" constant="20" id="9tY-zq-6eM"/>
-                            <constraint firstItem="XfC-sR-rYh" firstAttribute="bottom" secondItem="oIm-68-MUu" secondAttribute="bottom" constant="340" id="AXL-Bi-t5i"/>
-                            <constraint firstItem="XfC-sR-rYh" firstAttribute="trailing" secondItem="o0T-X9-HtO" secondAttribute="trailing" constant="28" id="BbO-jW-v78"/>
-                            <constraint firstItem="o0T-X9-HtO" firstAttribute="leading" secondItem="XfC-sR-rYh" secondAttribute="leading" constant="28" id="E2j-Rq-gdV"/>
-                            <constraint firstItem="XfC-sR-rYh" firstAttribute="bottom" secondItem="o0T-X9-HtO" secondAttribute="bottom" constant="161" id="EAP-2X-IkG"/>
-                            <constraint firstItem="KEH-Yz-2f6" firstAttribute="top" secondItem="dLQ-UB-0TL" secondAttribute="bottom" constant="38" id="Ecu-HY-pNh"/>
-                            <constraint firstItem="oIm-68-MUu" firstAttribute="leading" secondItem="XfC-sR-rYh" secondAttribute="leading" constant="28" id="Fsl-5E-w6D"/>
-                            <constraint firstItem="XfC-sR-rYh" firstAttribute="trailing" secondItem="dLQ-UB-0TL" secondAttribute="trailing" constant="28" id="KdJ-ZD-C3B"/>
-                            <constraint firstItem="o0T-X9-HtO" firstAttribute="top" secondItem="oIm-68-MUu" secondAttribute="bottom" constant="118" id="PAG-O1-5eV"/>
-                            <constraint firstItem="dLQ-UB-0TL" firstAttribute="top" secondItem="XfC-sR-rYh" secondAttribute="top" constant="29" id="U8O-z4-PJ7"/>
-                            <constraint firstItem="XfC-sR-rYh" firstAttribute="bottom" secondItem="KEH-Yz-2f6" secondAttribute="bottom" constant="417" id="b2I-gz-603"/>
-                            <constraint firstItem="XfC-sR-rYh" firstAttribute="trailing" secondItem="oIm-68-MUu" secondAttribute="trailing" constant="28" id="bOh-fo-oWw"/>
-                            <constraint firstItem="XfC-sR-rYh" firstAttribute="bottom" secondItem="dLQ-UB-0TL" secondAttribute="bottom" constant="512" id="hmd-Cd-trN"/>
-                            <constraint firstItem="dLQ-UB-0TL" firstAttribute="leading" secondItem="XfC-sR-rYh" secondAttribute="leading" constant="28" id="qY3-A1-SJ4"/>
-                            <constraint firstItem="KEH-Yz-2f6" firstAttribute="leading" secondItem="XfC-sR-rYh" secondAttribute="leading" constant="28" id="vlT-bh-mg6"/>
-                            <constraint firstItem="XfC-sR-rYh" firstAttribute="trailing" secondItem="KEH-Yz-2f6" secondAttribute="trailing" constant="28" id="wHN-K3-PrW"/>
+                            <constraint firstItem="XfC-sR-rYh" firstAttribute="bottom" secondItem="dLQ-UB-0TL" secondAttribute="bottom" constant="421" id="5y1-hD-m3O"/>
+                            <constraint firstItem="XfC-sR-rYh" firstAttribute="bottom" secondItem="o0T-X9-HtO" secondAttribute="bottom" constant="60" id="6CI-6c-UBc"/>
+                            <constraint firstItem="XfC-sR-rYh" firstAttribute="bottom" secondItem="KEH-Yz-2f6" secondAttribute="bottom" constant="334" id="Bpa-bc-lwa"/>
+                            <constraint firstItem="o0T-X9-HtO" firstAttribute="top" secondItem="oIm-68-MUu" secondAttribute="bottom" constant="110" id="CG6-1n-4dJ"/>
+                            <constraint firstItem="KEH-Yz-2f6" firstAttribute="leading" secondItem="XfC-sR-rYh" secondAttribute="leading" constant="28" id="CJm-xv-jgG"/>
+                            <constraint firstItem="dLQ-UB-0TL" firstAttribute="top" secondItem="XfC-sR-rYh" secondAttribute="top" constant="29" id="EU9-hn-njL"/>
+                            <constraint firstItem="oIm-68-MUu" firstAttribute="top" secondItem="KEH-Yz-2f6" secondAttribute="bottom" constant="50" id="Hif-J2-iQK"/>
+                            <constraint firstItem="XfC-sR-rYh" firstAttribute="bottom" secondItem="oIm-68-MUu" secondAttribute="bottom" constant="227" id="LbT-w0-kN6"/>
+                            <constraint firstItem="XfC-sR-rYh" firstAttribute="trailing" secondItem="KEH-Yz-2f6" secondAttribute="trailing" constant="28" id="WD3-0h-0eb"/>
+                            <constraint firstItem="XfC-sR-rYh" firstAttribute="trailing" secondItem="o0T-X9-HtO" secondAttribute="trailing" constant="28" id="X1n-dM-eHZ"/>
+                            <constraint firstItem="oIm-68-MUu" firstAttribute="leading" secondItem="XfC-sR-rYh" secondAttribute="leading" constant="28" id="dnz-RX-bj8"/>
+                            <constraint firstItem="KEH-Yz-2f6" firstAttribute="top" secondItem="dLQ-UB-0TL" secondAttribute="bottom" constant="30" id="gGG-bD-wAW"/>
+                            <constraint firstItem="dLQ-UB-0TL" firstAttribute="leading" secondItem="XfC-sR-rYh" secondAttribute="leading" constant="28" id="gOy-KD-8Tl"/>
+                            <constraint firstItem="XfC-sR-rYh" firstAttribute="trailing" secondItem="oIm-68-MUu" secondAttribute="trailing" constant="28" id="qph-vD-MvD"/>
+                            <constraint firstItem="o0T-X9-HtO" firstAttribute="leading" secondItem="XfC-sR-rYh" secondAttribute="leading" constant="28" id="vob-K3-qx1"/>
+                            <constraint firstItem="XfC-sR-rYh" firstAttribute="trailing" secondItem="dLQ-UB-0TL" secondAttribute="trailing" constant="28" id="wc6-u4-EKV"/>
                         </constraints>
                     </view>
                     <connections>
@@ -126,7 +132,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z15-fW-b6d" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1501" y="-252"/>
+            <point key="canvasLocation" x="-1501.5999999999999" y="-252.32383808095955"/>
         </scene>
         <!--Side Menu View Controller-->
         <scene sceneID="2Gt-TD-4F9">
