--- a/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
+++ b/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rmT-Rp-PLG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0XJ-Vh-eXi">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -26,9 +26,115 @@
             <point key="canvasLocation" x="402.89855072463769" y="1593.75"/>
         </scene>
         <!--Login View Controller-->
+        <scene sceneID="Xh0-gc-qjo">
+            <objects>
+                <viewController id="0XJ-Vh-eXi" customClass="LoginViewController" customModule="GSMFestival" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bmi-qp-uEy">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="G:NO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NKC-fe-drk">
+                                <rect key="frame" x="28" y="72" width="97" height="48"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="로그인" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rtY-Rh-Fd7">
+                                <rect key="frame" x="28" y="135" width="89" height="41"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="34"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="발급받은 아이디와 비밀번호를 입력하세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EAL-Nw-cAW">
+                                <rect key="frame" x="28" y="191" width="277.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KrL-Da-fzs">
+                                <rect key="frame" x="267" y="795" width="120" height="40"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="vbJ-NQ-M8k"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="로그인"/>
+                                <connections>
+                                    <action selector="loginBtn:" destination="0XJ-Vh-eXi" eventType="touchUpInside" id="Ivt-Ym-fCw"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0g5-G9-Yrv">
+                                <rect key="frame" x="28" y="236.5" width="358" height="44"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="아이디" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gx4-bx-QJq">
+                                        <rect key="frame" x="0.0" y="0.0" width="358" height="44"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="gx4-bx-QJq" secondAttribute="trailing" id="483-ck-QDd"/>
+                                    <constraint firstItem="gx4-bx-QJq" firstAttribute="top" secondItem="0g5-G9-Yrv" secondAttribute="top" id="gl7-nf-ehY"/>
+                                    <constraint firstAttribute="height" constant="44" id="lT6-as-9tj"/>
+                                    <constraint firstItem="gx4-bx-QJq" firstAttribute="leading" secondItem="0g5-G9-Yrv" secondAttribute="leading" id="p0j-25-6GG"/>
+                                    <constraint firstAttribute="bottom" secondItem="gx4-bx-QJq" secondAttribute="bottom" id="zdh-T9-4ca"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2eH-av-ekw">
+                                <rect key="frame" x="28" y="290.5" width="358" height="44"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ojF-ki-tdW">
+                                        <rect key="frame" x="0.0" y="0.0" width="358" height="44"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="4cp-mF-wYM"/>
+                                    <constraint firstItem="ojF-ki-tdW" firstAttribute="top" secondItem="2eH-av-ekw" secondAttribute="top" id="LS3-0O-cZY"/>
+                                    <constraint firstItem="ojF-ki-tdW" firstAttribute="leading" secondItem="2eH-av-ekw" secondAttribute="leading" id="XpZ-RH-2NJ"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="ZtB-w8-4gM"/>
+                                    <constraint firstAttribute="trailing" secondItem="ojF-ki-tdW" secondAttribute="trailing" id="kbZ-Ah-G1i"/>
+                                    <constraint firstAttribute="bottom" secondItem="ojF-ki-tdW" secondAttribute="bottom" id="nKX-av-DOH"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="MXq-TD-bj9"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="MXq-TD-bj9" firstAttribute="bottom" secondItem="KrL-Da-fzs" secondAttribute="bottom" constant="27" id="2LO-PE-qe1"/>
+                            <constraint firstItem="MXq-TD-bj9" firstAttribute="trailing" secondItem="KrL-Da-fzs" secondAttribute="trailing" constant="27" id="B5z-FG-zB0"/>
+                            <constraint firstItem="EAL-Nw-cAW" firstAttribute="top" secondItem="rtY-Rh-Fd7" secondAttribute="bottom" constant="15" id="DYd-HW-Gfu"/>
+                            <constraint firstItem="rtY-Rh-Fd7" firstAttribute="leading" secondItem="MXq-TD-bj9" secondAttribute="leading" constant="28" id="GgC-KZ-Aef"/>
+                            <constraint firstItem="0g5-G9-Yrv" firstAttribute="leading" secondItem="MXq-TD-bj9" secondAttribute="leading" constant="28" id="M4j-bl-9Le"/>
+                            <constraint firstItem="2eH-av-ekw" firstAttribute="leading" secondItem="MXq-TD-bj9" secondAttribute="leading" constant="28" id="g9N-Ds-71r"/>
+                            <constraint firstItem="2eH-av-ekw" firstAttribute="top" secondItem="0g5-G9-Yrv" secondAttribute="bottom" constant="10" id="ixj-MH-HkC"/>
+                            <constraint firstItem="MXq-TD-bj9" firstAttribute="trailing" secondItem="0g5-G9-Yrv" secondAttribute="trailing" constant="28" id="jdn-Kd-IF7"/>
+                            <constraint firstItem="MXq-TD-bj9" firstAttribute="trailing" secondItem="2eH-av-ekw" secondAttribute="trailing" constant="28" id="lLA-gQ-IE2"/>
+                            <constraint firstItem="NKC-fe-drk" firstAttribute="top" secondItem="MXq-TD-bj9" secondAttribute="top" constant="28" id="qWU-PD-clj"/>
+                            <constraint firstItem="0g5-G9-Yrv" firstAttribute="top" secondItem="EAL-Nw-cAW" secondAttribute="bottom" constant="25" id="snM-Sk-B9q"/>
+                            <constraint firstItem="rtY-Rh-Fd7" firstAttribute="top" secondItem="NKC-fe-drk" secondAttribute="bottom" constant="15" id="vgj-Vp-JHf"/>
+                            <constraint firstItem="NKC-fe-drk" firstAttribute="leading" secondItem="MXq-TD-bj9" secondAttribute="leading" constant="28" id="wD5-v4-82h"/>
+                            <constraint firstItem="EAL-Nw-cAW" firstAttribute="leading" secondItem="MXq-TD-bj9" secondAttribute="leading" constant="28" id="zjd-KG-C7W"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="doneBtn" destination="KrL-Da-fzs" id="DPc-EX-bCE"/>
+                        <outlet property="idView" destination="0g5-G9-Yrv" id="ZrY-xH-P9o"/>
+                        <outlet property="passwordView" destination="2eH-av-ekw" id="CbP-WI-lcF"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LUX-4j-F2S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2511.594202898551" y="-252.45535714285714"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="kUY-lB-j9k">
             <objects>
-                <viewController id="rmT-Rp-PLG" customClass="LoginViewController" customModule="GSMFestival" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="rmT-Rp-PLG" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="97R-UT-OIF">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -397,6 +503,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
