--- a/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
+++ b/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
@@ -88,7 +88,7 @@
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ojF-ki-tdW">
                                         <rect key="frame" x="0.0" y="0.0" width="358" height="44"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
@@ -123,7 +123,9 @@
                     </view>
                     <connections>
                         <outlet property="doneBtn" destination="KrL-Da-fzs" id="DPc-EX-bCE"/>
+                        <outlet property="idTextField" destination="gx4-bx-QJq" id="uqz-Ox-Bhb"/>
                         <outlet property="idView" destination="0g5-G9-Yrv" id="ZrY-xH-P9o"/>
+                        <outlet property="passwordTextField" destination="ojF-ki-tdW" id="UxN-ua-mw9"/>
                         <outlet property="passwordView" destination="2eH-av-ekw" id="CbP-WI-lcF"/>
                     </connections>
                 </viewController>
