--- a/Android/app/src/main/res/values/themes.xml
+++ b/Android/app/src/main/res/values/themes.xml
@@ -20,8 +20,12 @@
         <item name="android:textSize">22sp</item>
         <item name="android:textColor">#000000</item>
     </style>
-    <style name="some_id">
+    <style name="login">
         <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+    <style name="howToLogin">
+        <item name="android:textSize">14sp</item>
         <item name="android:textColor">#000000</item>
     </style>
 </resources>
