--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -63,7 +63,7 @@
         android:background="@drawable/login_edittext"
         android:ems="10"
         android:fontFamily="@font/bold"
-        android:hint="  아이디"
+        android:hint="@string/idEditText"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
