--- a/Android/app/src/main/res/values-night/themes.xml
+++ b/Android/app/src/main/res/values-night/themes.xml
@@ -28,4 +28,8 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">#000000</item>
     </style>
+    <style name="copyright">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
 </resources>
